SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.1.0 M2 (2008-04-dd)
-----------------------------------------

General
* refined the web deployer API
* added integration with Spring MVC
* added 'greedy-proxying' attribute to reference collections (spring-osgi.xsd)

Package org.springframework.osgi.config
* removed usage of deprecated setSource method in AbstractReferenceDefinitionParser
* added support for 'greedy-proxying' attribute

Package org.springframework.osgi.context
* added OSGi import for Spring property editors loaded reflectively
* property editors are using through Spring-DM core bundle instead of the target bundle
* AbstractOsgiBundleApplicationContext uses the raw bundle as the bean class loader to avoid class leaks
* improved start up NamespaceHandlerResolver look up to avoid class incompatibility problems
* added getContextClassLoader() method to AbstractDelegatedExecutionApplicationContext for pluggable thread context 
  class loader strategy
* improved AbstractOsgiBundleApplicationContext behaviour if the internal resource loader is not set

Package org.springframework.osgi.service
* refined weaving process for service importers so that knowledge of org.springframework.osgi package is not required

Package org.springframework.osgi.extender
* added OsgiApplicationContextCreator interface for handling the extender contexts creation
* added OsgiBeanFactoryPostProcessor interface for customizing the contexts created by the extender
* changed package of the internal, private bundle activator
* added filtering by type for the discovered namespace handler resolvers to avoid usage of classes with incompatible
  wiring

Package org.springframework.osgi.io
* extended OsgiBundleResource to implement ContextResource

Package org.springframework.osgi.service
* refined OsgiServiceCollectionProxyFactoryBean to allow for configurable 'greedy-proxying' behaviour